--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
-    "start": "npm-run-all --parallel open:src",
+    "start": "npm-run-all --parallel security-check open:src",
     "open:src": "babel-node buildScripts/srcServer.js",
     "localtunnel": "lt --port 3000 --subdomain kunstwerk",
     "security-check": "nsp check",
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/andrisengelis/nodejs-dev-env#readme",
   "devDependencies": {
+    "ajv": "^5.2.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
     "babel-preset-latest": "^6.24.1",
     "babel-register": "^6.24.1",
     "chai": "^4.0.2",
@@ -34,6 +36,10 @@
     "mocha": "^3.4.2",
     "npm-run-all": "^4.0.2",
     "nsp": "^2.6.3",
-    "open": "0.0.5"
+    "open": "0.0.5",
+    "webpack": "^3.0.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-md5-hash": "0.0.5"
   }
 }
