--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
-    "start": "npm-run-all --parallel security-check open:src",
+    "start": "npm-run-all --parallel security-check open:src lint:watch",
     "open:src": "babel-node buildScripts/srcServer.js",
     "localtunnel": "lt --port 3000 --subdomain kunstwerk",
+    "lint": "esw   webpack.config.* src buildScripts --color",
+    "lint:watch": "npm run lint -- --watch",
     "security-check": "nsp check",
     "share": "npm-run-all --parallel open:src localtunnel",
     "test": "mocha \"src/**/*.test.js\""
@@ -31,12 +33,17 @@
     "babel-register": "^6.24.1",
     "chai": "^4.0.2",
     "chalk": "^1.1.3",
+    "css-loader": "^0.28.4",
+    "eslint": "^4.1.1",
+    "eslint-plugin-import": "^2.6.0",
+    "eslint-watch": "^3.1.2",
     "express": "^4.15.3",
     "localtunnel": "^1.8.3",
     "mocha": "^3.4.2",
     "npm-run-all": "^4.0.2",
     "nsp": "^2.6.3",
     "open": "0.0.5",
+    "style-loader": "^0.18.2",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0",
     "webpack-hot-middleware": "^2.18.0",
